<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{43c0d85a-6909-422a-aaef-bb46a75b5c35}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
Moisture : REAL :=50; // Represent the soil moisture
Temp : REAL := 25; // Shows the temperature in Celsius
WaterRequired : BOOL := FALSE; // Tells if water is needed
WaterON : BOOL := FALSE; // Pump is on
WaterDuration : TIME :=T#0S;// Tell watering period
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>