<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="WateringTask" Id="{b5a1694e-819d-48dc-a239-eb210722768b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM WateringTask
VAR
	WaterTimer: TON;
state : INT	 :=0; 	
Delay: Ton;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ 	
//Watering control
CASE state OF
	
END_CASE
0:// Initial position
WaterON:= FALSE;
state:=1;
1:// Checking the conditions
IF WaterRequired THEN
            WaterDuration := GetWaterDuration(Moisture, Temp);
            WaterOn := TRUE;
            WaterTimer(IN := TRUE, PT := WaterDuration);
            nState := 2;
        ELSE
            nState := 3;
        END_IF;
		
2:  // Watering
WaterTimer(IN := TRUE);
        IF WaterTimer.Q THEN
          WaterON := FALSE;
WaterRequired := FALSE;
WaterTimer(IN := FALSE);
            state := 3;
3:// Idle
Delay(IN:=TRUE, PT:=T#5S);
IF NOT(Delay.Q) THEN
	RETURN;
END_IF
Delay(In:=FALSE);
state:=1;		
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="WateringTask">
      <LineId Id="7" Count="1" />
      <LineId Id="10" Count="2" />
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="7" />
      <LineId Id="17" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="32" Count="2" />
      <LineId Id="38" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="57" Count="3" />
      <LineId Id="56" Count="0" />
      <LineId Id="61" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>